--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,32 @@
 .App {
   text-align: center;
+  background-color: #282c34;
+  min-height: 100vh;
+  /* display: flex;
+  flex-direction: column; */
+}
+.App-logo {
+  height: 10vmin;
+  pointer-events: none;
+  float: left;
+}
+@media (prefers-reduced-motion: no-preference) {
+  .App-logo {
+    animation: App-logo-spin infinite 20s linear;
+  }
+}
+@keyframes App-logo-spin {
+  from {
+    transform: rotate(0deg);
+  }
+  to {
+    transform: rotate(360deg);
+  }
+}
+
+
+/* .App {
+  text-align: center;
 }
 
 .App-logo {
@@ -35,4 +62,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
