included folium map on center panel

--- a/src/assets/sass/_center_panel.scss
+++ b/src/assets/sass/_center_panel.scss
@@ -29,5 +29,10 @@
                 color: #6c6c6c;
             }
         }
+        .map {
+            margin: 25vh auto;
+            width: 100%;
+            height: 100%;
+        }
     }
 }
