--- a/src/assets/sass/_right_panel.scss
+++ b/src/assets/sass/_right_panel.scss
@@ -4,7 +4,134 @@
         background-color: #f8f8f8;
         position: relative;
         text-align: center;
-    }
+        .container {
+            margin: 10px 20px;
+            // text-align: left;
+            color: #6c6c6c;
+            .title {
+              font-weight: 800;
+              font-size: 16px;
+              line-height: 22px;
+              letter-spacing: 0.08em;
+              text-transform: uppercase;
+            }
+            .description {
+              font-family: Open Sans;
+              font-style: normal;
+              font-weight: normal;
+              font-size: 12px;
+              line-height: 16px;
+              letter-spacing: 0.04em;
+              //changes margin-top to include spacing for question-icon
+              margin-top: 14px;
+            }
+            .TextInput {
+                margin-top: 15px;
+                width: 100%;
+                height: 30px;
+                background: #FFFFFF;
+                border: 1px solid #EBE9E9;
+                box-sizing: border-box;
+                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                border-radius: 4px;
+                outline: none;
+                input {
+                  border: 0;
+                  height: 30px;
+                  width: 100%;
+                  outline: none;
+                  resize: none;
+                }
+                textarea {
+                  border: 0;
+                  height: 30px;
+                  width: 100%;
+                  outline: none;
+                  resize: none;
+                }
+                ::-webkit-input-placeholder {
+                  text-align: center;
+               }
+              }
+            }
+            .TextInputHalfLeft {
+              margin-top: 15px;
+              width: 45%;
+              height: 30px;
+              background: #FFFFFF;
+              border: 1px solid #EBE9E9;
+              box-sizing: border-box;
+              box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+              border-radius: 4px;
+              outline: none;
+              input {
+                border: 0;
+                height: 30px;
+                width: 100%;
+                outline: none;
+                resize: none;
+              }
+              textarea {
+                border: 0;
+                height: 30px;
+                width: 100%;
+                outline: none;
+                resize: none;
+              }
+              ::-webkit-input-placeholder {
+                text-align: center;
+             }
+            }
+            .TextInputHalfRight {
+              // margin-top: -7%;
+              margin-top: -30px;
+              margin-left: 55%;
+              width: 45%;
+              height: 30px;
+              background: #FFFFFF;
+              border: 1px solid #EBE9E9;
+              box-sizing: border-box;
+              box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+              border-radius: 4px;
+              outline: none;
+              input {
+                border: 0;
+                height: 30px;
+                width: 100%;
+                outline: none;
+                resize: none;
+              }
+              textarea {
+                border: 0;
+                height: 30px;
+                width: 100%;
+                outline: none;
+                resize: none;
+              }
+              ::-webkit-input-placeholder {
+                text-align: center;
+                }
+            }
+        }   
+        .logo {
+            height: 10vh;
+            pointer-events: none;
+            // float: left;
+          }
+          @media (prefers-reduced-motion: no-preference) {
+            .logo {
+              animation: logo-spin infinite 20s linear;
+            }
+          }
+          @keyframes logo-spin {
+            from {
+              transform: rotate(0deg);
+            }
+            to {
+              transform: rotate(360deg);
+            }
+        }
+    
     .not-set {
         width: inherit;
         .overlay {
