--- a/src/assets/sass/_right_panel.scss
+++ b/src/assets/sass/_right_panel.scss
@@ -112,6 +112,74 @@
                 text-align: center;
                 }
             }
+            .panel-buttons {
+              z-index: 998;
+              position: absolute;
+              bottom: 18px;
+              left: 20px;
+    
+              font-weight: bold;
+              font-size: 12px;
+              line-height: 16px;
+    
+              letter-spacing: 0.04em;
+              text-transform: uppercase;
+              width: calc(100% - 40px);
+              display: flex;
+              justify-content: space-between;
+              div {
+                  padding: 10px 0;
+                  height: 36px;
+                  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                  border-radius: 4px;
+                  box-sizing: border-box;
+    
+                  &:hover {
+                      cursor: pointer;
+                      filter: brightness(110%);
+                  }
+              }
+              .ok-button {
+                bottom: 0;
+                position: absolute;
+                width: calc((100% - (30px + 10px)) / 4);
+                height: 36px;
+                left: 75%;
+                background: #f8f8f8;
+                border: 1px solid #616161;
+                box-sizing: border-box;
+                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                border-radius: 4px;
+    
+                color: #616161;
+                text-align: center;
+    
+                &:hover {
+                    cursor: pointer;
+                    filter: brightness(110%);
+                }
+              }
+              .cancel-button {
+                bottom: 0;
+                position: absolute;
+                width: calc((100% - (30px + 10px)) / 4);
+                height: 36px;
+    
+                background: #f8f8f8;
+                border: 1px solid #616161;
+                box-sizing: border-box;
+                box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+                border-radius: 4px;
+    
+                color: #616161;
+                text-align: center;
+    
+                &:hover {
+                    cursor: pointer;
+                    filter: brightness(110%);
+                }
+              }
+            }
         }   
         .logo {
             height: 10vh;
